<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_time"
                android:textSize="@dimen/font_24sp" />

            <EditText
                android:id="@+id/edit_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/default_time"
                android:numeric="integer" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_rate"
                android:textSize="@dimen/font_24sp" />

            <EditText
                android:id="@+id/edit_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/defalut_rate"
                android:numeric="integer" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/more_music"
                android:textSize="@dimen/font_24sp" />

            <Switch
                android:id="@+id/st_more_music"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lead_in"
                android:textSize="@dimen/font_24sp" />

            <Switch
                android:id="@+id/st_lead_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_watermark"
                android:textSize="@dimen/font_24sp" />

            <EditText
                android:id="@+id/edit_watermark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/defalut_watermark"
                android:numeric="integer" />
        </LinearLayout>

        <Button
            android:id="@+id/record"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_record" />

        <TextView
            android:id="@+id/tv_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_24sp" />
    </LinearLayout>
</ScrollView>
